# hex-magic-c

./: .clang-format  .clangd  CMakeLists.txt  README.md  build.sh  dev.sh  run.sh
src/: hex.cpp  hex.h  hex_magic.cpp  hex_magic.h  hex_magic_hex.cpp  hex_magic_hex.h  hex_magic_intrinsics.h  hex_magic_math.h  hex_magic_platform.h  hex_magic_render.cpp  hex_magic_render.h  hex_platform.cpp  hex_platform.h  linux_hex_magic.cpp  linux_hex_magic.h  main.cpp  math.h
